# winscribe

./: Cargo.toml  README.md
.github/workflows/: publish.yml  test.yml
manifest/: controlsv6.xml  dpiaware.xml
src/: compiler.rs  error.rs  lib.rs  util.rs  writer.rs
src/res/: icon.rs  mod.rs
src/res/manifest/: features.rs  mod.rs
src/res/version_info/: block.rs  fixed.rs  mod.rs
