[package]
name = "winscribe"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AmionSky/winscribe"
description = "Inscribe Windows resource & manifest files onto your executables"
categories = ["development-tools::build-utils"]
keywords = ["windows", "resource", "manifest"]
authors = ["Csányi István <icsanyi96@gmail.com>"]

[target.'cfg(windows)'.dependencies]
windows-registry = "0.3.0"
